# cass_logger_dev

./: .gitignore  CassLogger.iss  CassLogger.spec  README.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml
examples/: download_and_plot_ex.py  download_and_process_example.py  load_and_plot_ex.py
gui/: app.py  requirements.txt
gui/api/: main_api.py
gui/frontend/src/: App.css  App.tsx  types.ts
gui/frontend/src/components/: ConfigPanel.tsx  DataPanel.tsx  DevicePanel.tsx  InfoTip.tsx  UpdateBanner.tsx
gui/services/: update_service.py
scripts/: generate_manifest.py
src/: cass_commands.py  download_and_process_example.py  rtc_sync_example.py
